Bug 385437 - Decrypted file is not saved.
Summary: Decrypted file is not saved.
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 17.08
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-06 12:06 UTC by Paul
Modified: 2017-10-18 17:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul 2017-10-06 12:06:39 UTC
kgpg 17.08.01
Plasma 5.10.5
Frameworks 5.38.0
Qt 5.9.1

An encrypted file when left clicked (from Dolphin) launches kgpg which then asks for the passphrase. The decrypted file however is not saved in the directory containing the encrypted version, nor does it seem to be saved anywhere!

See also the openSUSE forum post (3 onward): https://forums.opensuse.org/showthread.php/527478
Comment 1 CnZhx 2017-10-07 09:11:31 UTC
Thank you, Paul, for bring this up.

I just want to add that the decrypted file is used to be opened in Kgpg text editor directly but it will not now along with the not-saved-anywhere problem.
Comment 2 Rolf Eike Beer 2017-10-18 17:08:35 UTC
Git commit 89ef50ccf93d98680c7f00bc9412b7774e6ca1a1 by Rolf Eike Beer.
Committed on 18/10/2017 at 17:04.
Pushed by dakon into branch 'Applications/17.08'.

fix output filename constructions for files passed on the commandline
FIXED-IN:17.08.3

M  +1    -1    kgpgexternalactions.cpp

https://commits.kde.org/kgpg/89ef50ccf93d98680c7f00bc9412b7774e6ca1a1