fix output filename constructions for files passed on the commandline

BUG:385437
FIXED-IN:17.08.3